# dmoz-dataset-extractor

./: dmoz-dataset-extractor.cabal
src/: Main.hs
src/Data/Dmoz/: Crawler.hs  Extractor.hs  FilterTopics.hs  Options.hs  Page.hs  Pruner.hs  Storer.hs
