name: dmoz-dataset-extractor
version:  0.2.0.0
synopsis: Parses, filters and persists the RDF XML file from dmoz.org.
description: Parses the RDF XML file from dmoz.org, filters it for specific
  categories, and persists the resulting dataset in PostgreSQL.
license: AllRightsReserved
author: Nathan Kleyn
maintainer: nathan@nathankleyn.com
copyright:
category: Data
build-type: Simple
cabal-version:  >=1.8

executable dmoz-dataset-extractor
  HS-Source-Dirs: src
  main-is: Main.hs
  other-modules:
    Data.Dmoz.Crawler
    Data.Dmoz.Extractor
    Data.Dmoz.FilterTopics
    Data.Dmoz.Options
    Data.Dmoz.Page
    Data.Dmoz.Pruner
    Data.Dmoz.Storer

  ghc-options: -Wall

  build-depends:
    async ==2.0.1.*,
    base ==4.6.*,
    bytestring ==0.10.0.*,
    conduit ==1.0.*,
    getflag ==1.*,
    HDBC ==2.3.1.*,
    HDBC-sqlite3 ==2.3.3.*,
    http-conduit ==1.9.4.*,
    iconv ==0.4.1.*,
    lifted-base ==0.2.1.*,
    network ==2.4.1.*,
    resourcet ==0.4.7.*,
    split ==0.2.*,
    text ==0.11.3.*,
    xml-conduit ==1.1.0.*,
    xml-types ==0.3.*